2003-01-21  Havoc Pennington  <hp@pobox.com>

        (not for 2.2.0)
	
        Fix for the "mangles focus window when switching workspaces 
	and using mouse focus" bug
	
	* src/stack.c (meta_stack_get_default_focus_window_at_point): new
	function

	* src/screen.c (meta_screen_focus_mouse_window): new function
	(meta_screen_focus_default_window): new function
	
	* src/workspace.c (meta_workspace_activate): use the 
	new meta_screen_focus_default_window()

2003-01-17  Havoc Pennington  <hp@pobox.com>

        (not for 2.2.0)
	
	* src/window.c (meta_window_handle_mouse_grab_op_event): fix event
	compression code to use GDK algorithm suggested by Owen, should be 
	more efficient.

2003-01-22  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "mn" to ALL_LINGUAS.

2003-01-21  Havoc Pennington  <hp@redhat.com>

	* src/display.c (event_callback): only hop window to the current
	workspace if the window was previously minimized. Should keep
	mozilla from popping windows over to your current workspace.

	(change will not be in 2.2.0)
	
2003-01-20  Havoc Pennington  <hp@redhat.com>

        Attempt to fix #85916 (change will not be in 2.2.0)
	
	* src/keybindings.c (primary_modifier_still_pressed): new function
	(handle_workspace_switch): handle modifier release prior to
	getting the grab
	(do_choose_window): handle modifier release prior to getting the 
	grab

	* src/keybindings.c (grab_keyboard): properly return failure
	if the GrabKeyboard doesn't work
	
2003-01-20  Havoc Pennington  <hp@pobox.com>

	* NEWS: update

	* configure.in: 2.4.21

2003-01-14  Havoc Pennington  <hp@pobox.com>

	* src/window.c (meta_window_maximize, meta_window_unmaximize) 
	(meta_window_make_fullscreen, meta_window_unmake_fullscreen): 
	recalc_window_features() after making these changes, should fix 
	#103317
	
2003-01-14  Rob Adams <robadams@ucla.edu>

	* src/prefs.c: Increase the number of run_command bindings in
	screen_bindings from 12 to 32.
